--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- icon bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- nav -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar bg-primary navbar-expand-lg" style="background-color: #8A87E0 !important;">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -19,33 +23,226 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link me-3 text-white" href="#about">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link me-3 text-white" href="#skills">My skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link me-3 text-white" href="#portofolio">Portofolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link me-3 text-white" href="#contacts">Contacts</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <!-- banner -->
+    <div class="container-fluid banner d-flex align-items-center " id="home">
+        <div class="container">
+            <h1 class="text-white mb-3">Hi there! My name is Ajeng and I'am a junior web developer</h1>
+            <br>
+            <a class="btn bg-custom btn-custom rounded-pill"
+                href="https://drive.google.com/file/d/1E6d5G-mPdEwfzh-8gKhUX1GT6pOVVP4J/view?usp=drive_link">Download
+                The CV</a>
+        </div>
+    </div>
+
     <!-- about -->
-    <!-- skill -->
+    <div class="container-fluid py-5" id="about">
+        <div class="container text-center">
+            <h3>About me</h3>
+            <br>
+            <p>I am a third-year informatics undergraduate student with a strong interest in programming. Throughout my
+                academic journey, I have gained valuable experience in developing various web applications for college
+                projects. Proficient in version control systems like Git and GitHub, I have effectively managed and
+                collaborated on several coding projects.
+
+                My passion for programming extends beyond the classroom, driving me to explore diverse technologies and
+                frameworks. I am enthusiastic about leveraging my skills to contribute meaningfully to real-world
+                projects and to continue learning and growing in the field of informatics.</p>
+        </div>
+    </div>
+    <!-- skills -->
+    <div class="container-fluid py-5" id="skills">
+        <div class="container">
+            <h3 class="text-center">My skills</h3>
+            <br>
+            <div class="row justify-content-center">
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">HTML</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">CSS</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">Bootstrap</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">PHP</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">Javascript</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">Laravel</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">Express Js</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">Node Js</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">MySQL</p>
+                    </div>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <div class="circle bg-custom d-flex align-content-center justify-content-center">
+                        <p class="mt-2 font-skill">MongoDB</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- portofolio -->
+    <div class="container-fluid py-5" id="portofolio">
+        <div class="container">
+            <h3 class="text-center">Portofolio</h3>
+            <br>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/p-1.png" class="card-img-top img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Restaurant Website</h5>
+                            <p class="card-text">A front-end website for a restaurant built with Bootstrap. Here's the
+                                source <a href="https://github.com/AjengAlyaK/bootstrap-project-1">code</a><br><br></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/p-2.png" class="card-img-top img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Company Profile Website</h5>
+                            <p class="card-text">A front-end website for a company profile built with Bootstrap. Here's
+                                the source <a href="https://github.com/AjengAlyaK/kkn-72">code</a><br><br></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/p-3.png" class="card-img-top img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Food Delivery Website</h5>
+                            <p class="card-text">A fullstack website for an online food delivery built with Bootstrap
+                                and express js. Here's the source <a
+                                    href="https://github.com/AjengAlyaK/Food-Order">code</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/p-6.png" class="card-img-top img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Online Store Website</h5>
+                            <p class="card-text">A fullstack website for an online store built with Bootstrap
+                                and laravel. Here's the source <a
+                                    href="https://github.com/AjengAlyaK/Food-Order">code</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/p-5.png" class="card-img-top img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Zakat Fitrah Website</h5>
+                            <p class="card-text">A fullstack website for an online zakat fitrah record built with
+                                Bootstrap and laravel. Here's the source <a
+                                    href="https://github.com/AjengAlyaK/zakat_fitrah">code</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="images/p-4.png" class="card-img-top img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Mental Health Website</h5>
+                            <p class="card-text">A fullstack website for an mental health services built with laravel
+                                and bootstrap. Here's the source <a
+                                    href="https://github.com/AjengAlyaK/e-commerce">code</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- contacts -->
+    <div class="container-fluid py-5" id="contacts">
+        <div class="container">
+            <h3 class="text-center">Contacts</h3>
+            <br>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="text-center">
+                        <p><i class="bi bi-envelope me-2"></i> E-mail</p>
+                        <p>ajenga990@gmail.com</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="text-center">
+                        <p><i class="bi bi-telephone me-2"></i> Telephone number</p>
+                        <p>+6285314031274</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="text-center">
+                        <p><i class="bi bi-share me-2"></i></i> Social media</p>
+                        <p><a href="https://www.linkedin.com/in/ajengalyakartikasari/"><i
+                                    class="bi bi-linkedin me-2 text-dark"></i></a><a
+                                href="https://www.instagram.com/ajeng.alya.k?igsh=MmVlMjlkMTBhMg=="><i
+                                    class="bi bi-instagram text-dark"></i></a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <div class="container-fluid py-3 bg-dark text-dark">
+        <div class="container d-flex justify-content-between">
+            <label class="text-white">&copy;2023 Ajeng Alya Kartika Sari</label>
+            <label class="text-white">BACK TO TOP <a href="#home"><i
+                        class="bi bi-arrow-up-square d-3 ms-2 text-white"></i></i></a></label>
+        </div>
+    </div>
 
-
-
-
-
+    <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
