--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portofolio | Ajeng Alya Kartika Sari</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -44,7 +44,7 @@
     <!-- banner -->
     <div class="container-fluid banner d-flex align-items-center " id="home">
         <div class="container">
-            <h1 class="text-white mb-3">Hi there! My name is Ajeng and I'am a junior web developer</h1>
+            <h1 class="text-white mb-3">Hi there! My name is Ajeng Alya Kartika Sari and I'am a junior web developer</h1>
             <br>
             <a class="btn bg-custom btn-custom rounded-pill"
                 href="https://drive.google.com/file/d/1E6d5G-mPdEwfzh-8gKhUX1GT6pOVVP4J/view?usp=drive_link">Download
