--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h3 class="text-center">Portofolio</h3>
             <br>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="card">
                         <img src="images/p-1.png" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="card">
                         <img src="images/p-2.png" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -167,7 +167,7 @@
                 </div>
             </div>
             <div class="row mt-3">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="card">
                         <img src="images/p-6.png" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="card">
                         <img src="images/p-5.png" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="card">
                         <img src="images/p-4.png" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
@@ -209,19 +209,19 @@
             <h3 class="text-center">Contacts</h3>
             <br>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="text-center">
                         <p><i class="bi bi-envelope me-2"></i> E-mail</p>
                         <p>ajenga990@gmail.com</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="text-center">
                         <p><i class="bi bi-telephone me-2"></i> Telephone number</p>
                         <p>+6285314031274</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="text-center">
                         <p><i class="bi bi-share me-2"></i></i> Social media</p>
                         <p><a href="https://www.linkedin.com/in/ajengalyakartikasari/"><i
